--- a/references.bib
+++ b/references.bib
@@ -251,3 +251,93 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {Full Text PDF:D\:\\Zotero\\storage\\XK7MW96R\\Millard 和 Richardson - 2013 - Wetland mapping with LiDAR derivatives, SAR polari.pdf:application/pdf},
 }
 
+
+@article{gorelick_google_2017,
+	series = {Big {Remotely} {Sensed} {Data}: tools, applications and experiences},
+	title = {Google {Earth} {Engine}: {Planetary}-scale geospatial analysis for everyone},
+	volume = {202},
+	issn = {0034-4257},
+	shorttitle = {Google {Earth} {Engine}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0034425717302900},
+	doi = {10.1016/j.rse.2017.06.031},
+	abstract = {Google Earth Engine is a cloud-based platform for planetary-scale geospatial analysis that brings Google's massive computational capabilities to bear on a variety of high-impact societal issues including deforestation, drought, disaster, disease, food security, water management, climate monitoring and environmental protection. It is unique in the field as an integrated platform designed to empower not only traditional remote sensing scientists, but also a much wider audience that lacks the technical capacity needed to utilize traditional supercomputers or large-scale commodity cloud computing resources.},
+	language = {en},
+	urldate = {2023-03-14},
+	journal = {Remote Sensing of Environment},
+	author = {Gorelick, Noel and Hancher, Matt and Dixon, Mike and Ilyushchenko, Simon and Thau, David and Moore, Rebecca},
+	month = dec,
+	year = {2017},
+	keywords = {Analysis, Big data, Cloud computing, Data democratization, Earth Engine, Platform},
+	pages = {18--27},
+	file = {ScienceDirect Full Text PDF:D\:\\Zotero\\storage\\NZ77554A\\Gorelick 等 - 2017 - Google Earth Engine Planetary-scale geospatial an.pdf:application/pdf;ScienceDirect Snapshot:D\:\\Zotero\\storage\\YW6K439E\\S0034425717302900.html:text/html},
+}
+
+@misc{noauthor_machine_nodate,
+	title = {Machine {Learning} in {Earth} {Engine} {\textbar} {Google} {Earth} {Engine}},
+	url = {https://developers.google.com/earth-engine/guides/machine-learning},
+	language = {en},
+	urldate = {2023-03-14},
+	journal = {Google Developers},
+	file = {Snapshot:D\:\\Zotero\\storage\\JU5WUHCP\\machine-learning.html:text/html},
+}
+
+@misc{noauthor_reducer_nodate,
+	title = {Reducer {Overview} {\textbar} {Google} {Earth} {Engine}},
+	url = {https://developers.google.com/earth-engine/guides/reducers_intro},
+	language = {en},
+	urldate = {2023-03-14},
+	journal = {Google Developers},
+	file = {Snapshot:D\:\\Zotero\\storage\\RWW6WQPQ\\reducers_intro.html:text/html},
+}
+
+@article{saad_el_imanni_multispectral_2023,
+	title = {Multispectral {UAV} data for detection of weeds in a citrus farm using machine learning and {Google} {Earth} {Engine}: {Case} study of {Morocco}},
+	volume = {30},
+	issn = {2352-9385},
+	shorttitle = {Multispectral {UAV} data for detection of weeds in a citrus farm using machine learning and {Google} {Earth} {Engine}},
+	url = {https://www.sciencedirect.com/science/article/pii/S235293852300023X},
+	doi = {10.1016/j.rsase.2023.100941},
+	abstract = {Accurate and timely weed mapping between and within trees is considered one of the major challenges in the site-specific weed management systems. This research presents the first cloud computing approach based on the incorporation of multispectral Unmanned Aerial Vehicle (UAV) imagery in the Google Earth Engine (GEE) programming environment with the aim of improving the mapping of weed patches between and within trees in a citrus farm. For this purpose, the UAV multispectral bands (red, green, blue, near infrared, and red edge), as well as the estimated vegetation height from the UAV Digital Elevation Model (DEM) were analysed in terms of tree and weed discrimination and used as input into Random Forest (RF) and k-nearest neighbors (KNN) machine learning algorithms. From the DEM, the Digital Terrain Model (DTM) was estimated using the Inverse Distance Weighted Interpolation (IDW) of the elevation values of dense points on the soil. The plant height was derived by subtracting the DTM from the DEM, resulting in the Canopy Height Model (CHM). The experimental results show that: (i) the combination of spectral bands and the CHM can classify both trees and weeds with an overall accuracy reached 96.87\%; (ii) the RF classifier was more robust compared to KNN in the classification performance; (iii) when compared to the use of UAV spectral bands, the addition of the CHM can improve the accuracy of crop classification by 13.36\% (KNN) and 1.79\% (RF). Furthermore, the integration of UAV imagery in the GEE was highly efficient in terms of automation of the UAV imagery processing.},
+	language = {en},
+	urldate = {2023-03-14},
+	journal = {Remote Sensing Applications: Society and Environment},
+	author = {Saad El Imanni, Hajar and El Harti, Abderrazak and Bachaoui, El Mostafa and Mouncif, Hicham and Eddassouqui, Fatine and Hasnai, Mohamed Achraf and Zinelabidine, Moulay Ismail},
+	month = apr,
+	year = {2023},
+	keywords = {Canopy height model (CHM), Google earth engine (GEE), Machine learning, Multispectral UAV imagery, Weed mapping},
+	pages = {100941},
+	file = {ScienceDirect Snapshot:D\:\\Zotero\\storage\\8PIR2GSZ\\S235293852300023X.html:text/html},
+}
+
+@article{tamiminia_google_2020,
+	title = {Google {Earth} {Engine} for geo-big data applications: {A} meta-analysis and systematic review},
+	volume = {164},
+	issn = {09242716},
+	shorttitle = {Google {Earth} {Engine} for geo-big data applications},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0924271620300927},
+	doi = {10.1016/j.isprsjprs.2020.04.001},
+	abstract = {Semantic Scholar extracted view of "Google Earth Engine for geo-big data applications: A meta-analysis and systematic review" by H. Tamiminia et al.},
+	language = {en},
+	urldate = {2023-03-24},
+	journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+	author = {Tamiminia, Haifa and Salehi, Bahram and Mahdianpari, Masoud and Quackenbush, Lindi and Adeli, Sarina and Brisco, Brian},
+	month = jun,
+	year = {2020},
+	pages = {152--170},
+}
+
+@article{moore_google_2011,
+	title = {Google {Earth} {Engine}: a new cloud-computing platform for global-scale earth observation data and analysis},
+	shorttitle = {Google {Earth} {Engine}},
+	abstract = {Google Earth Engine is a new technology platform that enables monitoring and measurement of changes in the earth's environment, at planetary scale, on a large catalog of earth observation data. The platform offers intrinsically-parallel computational access to thousands of computers in Google's data centers. Initial efforts have focused primarily on global forest monitoring and measurement, in support of REDD+ activities in the developing world. The intent is to put this platform into the hands of scientists and developing world nations, in order to advance the broader operational deployment of existing scientific methods, and strengthen the ability for public institutions and civil society to better
+understand, manage and report on the state of their natural resources. Earth Engine currently hosts online nearly the complete historical Landsat archive of L5 and L7 data collected over more than twenty-five years. Newly-collected Landsat imagery is downloaded from USGS EROS Center into Earth Engine on a daily basis. Earth Engine also includes a set of historical and current MODIS data products. The platform supports generation, on-demand, of spatial and temporal mosaics, "best-pixel" composites (for example to remove clouds and gaps in satellite imagery), as well as a variety of spectral indices. Supervised learning methods are available over the Landsat data catalog. The platform also includes a new application programming framework, or "API", that allows
+scientists access to these computational and data resources, to scale their current algorithms or develop new ones. Under the covers of the Google Earth Engine API is an intrinsically-parallel image-processing system. Several forest monitoring applications powered by this API are currently in development and expected to be operational in 2011.
+Combining science with massive data and technology resources in a cloud-computing framework can offer advantages of computational speed, ease-of-use and collaboration, as well as transparency in data and methods. Methods developed for global processing of MODIS data to map land cover are being adopted for use with Landsat data. Specifically, the MODIS Vegetation Continuous Field product methodology has been applied for mapping forest extent and change at national scales using Landsat time-series data sets. Scaling this method to continental and global scales is enabled by Google Earth Engine computing capabilities. By combining the supervised learning VCF approach with the Landsat archive and cloud computing, unprecedented monitoring of land cover dynamics is enabled.},
+	journal = {AGU Fall Meeting Abstracts},
+	author = {Moore, R. and Hansen, M.},
+	month = dec,
+	year = {2011},
+	pages = {02},
+}
+
+
