--- a/Week1.qmd
+++ b/Week1.qmd
@@ -1,45 +1,84 @@
 # Week 1
 
 ## Summary
-This section summarises the lecture content and a graph of feature space derived from practical in SNAP operations.
 
-Passive data: Energy usually in eletcromagnetic form e.g., human eyes
+- Data types in remote sensing:
+    - Passive data: Energy in electromagnetic form (e.g., human eyes)
+    - Active data: Energy in addition to illumination (e.g., radar)
+- Interaction of EM waves with Earth's surface and atmosphere:
+    - Single: This category refers to the interaction of EM waves with only one component of the Earth's system, either the surface or the atmosphere. For example, when sunlight (an EM wave) directly reaches the Earth's surface without interacting with the atmosphere, it is considered a single interaction. Similarly, if the EM wave only interacts with the atmosphere and does not reach the surface, it is also a single interaction. In remote sensing, single interactions are usually the most straightforward to analyze. The most straightforward to analyze.
+    - Dual: Dual interactions involve the EM waves interacting with both the Earth's surface and atmosphere. In this case, the EM waves pass through the atmosphere, interact with the Earth's surface, and then pass back through the atmosphere before reaching the sensor. This process results in changes to the EM waves, such as absorption or scattering, which can affect the quality and interpretation of the remote sensing data. apply atmospheric correction techniques to retrieve accurate information about the Earth's surface.
+    - Quad: Quad interactions refer to EM waves interacting with multiple components of the Earth's system, such as the surface, atmosphere, and other features (e.g., vegetation, water bodies). Involve various processes such as absorption, scattering, reflection, and transmission. Account for the unique characteristics and properties of each component involved, making the process more challenging.
 
-Active data: Energy in addition in illumination . e.g., radar.
+| Interaction Type | Components of Earth | Processes Considered | Difficulty |
+| --- | --- | --- | --- |
+| Single | Surface OR Atmosphere | Direct interaction with one component | Most straightforward to analyze |
+| Dual | Surface AND Atmosphere | Absorption, scattering | Requires atmospheric correction for accurate results |
+| Quad | Surface, Atmosphere, Features | Absorption, scattering, reflection, transmission | More challenging due to multiple components involved |
 
-How EM waves interact with Earth's surface and atmosphere: Reflection, scattering, absorption
+### **Remote Sensing Data Formats**
 
-single
+- Raster formats:
+    - BIL
+    - BSQ
+    - BIP
+    - GeoTIFF
 
-dual
+### **Four Resolutions in Remote Sensing**
 
-quad
+1. Spatial resolution:
+    - Ranges from 10 cm to several kilometers
+2. Spectral resolution:
+    - Number of different spectral bands captured
+    - Unique spectral signatures for each feature on Earth
+    - Atmospheric windows
+    - Vegetation: Red edge - infrared bands
+        - Application: Analyze infrared bands in cities to identify access to vegetation
+3. Radiometric resolution:
+    - Resolution of a cell's value
+4. Temporal resolution:
+    - Usually inversely related to pixel size (spatial resolution)
+- Example satellite sensor: MODIS
 
+### **Bands Explained**
 
+- In remote sensing, bands refer to the specific ranges of wavelengths captured by a sensor.
+- Each band captures information about different features on Earth's surface.
+- Understanding the properties of each band helps in the interpretation and analysis of remote sensing data.
 
-### remotely-sensed data usually comes in
+[]()
 
-Raster: file
+## Application
 
-types: BIL, BSQM BIP, GeoTIFF
+| Type of Wave | Wavelength Range | Frequency Range | Example Applications |
+| --- | --- | --- | --- |
+| Radio Waves | >1mm | <300 GHz | Broadcasting, communication, radar |
+| Microwaves | 1mm - 1m | 300 MHz - 300 GHz | Cooking, communication, radar |
+| Infrared Waves | 700 nm - 1 mm | 300 GHz - 430 THz | Thermal imaging, remote controls |
+| Visible Light | 400 nm - 700 nm | 430 THz - 750 THz | Human vision, photography |
+| Ultraviolet Waves | 10 nm - 400 nm | 750 THz -30 PHz | Sterilization, fluorescence microscopy |
+| X-Rays | <10 nm | >30 PHz | Medical imaging, airport security |
+| Gamma Rays | <0.01 nm | >30 EHz | Cancer treatment, nuclear medicine |
 
-### Four resolutions:
+Start
+|
+V
+Generate electromagnetic waves
+|
+V
+Determine frequency, wavelength, or energy
+|
+V
+Classify waves into types (radio, microwave, infrared, visible light, ultraviolet, X-rays, gamma rays)
+|
+V
+Identify applications for each type of wave (broadcasting, communication, cooking, thermal imaging, human vision, medical imaging)
+|
+V
+End
 
-Spatial: ranging from 10 cm to several kilos
+### Practical
 
-Spectral: How many different spectral bands are there? (Every feature on earth has a unique spectral signature)
-
-(Atmospheric windows: )
-
-(Vegetation: red edge \-- infra bands. APP: look at the infra band s of city to identify who has access to vegetation)
-
-Radiometric resolution: resolution of cell's value
-
-Temporal resolution: ussualy inversly relate3 to pixel size (spatial)
-
-MODIS
-
-### Practical 
 ![Spectral Feature Space, Vegetation On Bands B04 and B08](images/spectral_feature_space_vege_B04_B08.png){#fig-vege}
 
 ## Application:
@@ -47,8 +86,6 @@ MODIS
 "Spectral Feature Space, Vegetation On Bands B04 and B08"
 
 One of the applications really attracted me was the spatial signature of vegetation on the terra, as we could assign features to each end of the spatial signature area see @fig-vege, such as bare land on the right end of the triangle-like area where red light captured are dense while near-infrared level is low. Heavy vegetation are witnessed at the upper end of the triangle-like area where red light low and near-infrared is high, indicating heavy biomass. As for the left-down corner where both red and near-infrared are low, we can identify wet lands. This is integrated in the NDVI (Normalized Difference Vegetation Index) to estimate vegetation cover.
-
-
 
 Spatial signatures can also be used to monitor the health of vegetation by identifying patterns of quavariation in spectral reflectance that are indicative of stress or disease. For example, vegetation that is stressed or diseased may have a different spectral reflectance signature than healthy vegetation, which can be identified using spatial signatures.
 
